# anomaly-detection

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: benchmark.yaml  default.yaml
configs/examples/: fairness.yaml  fraud.yaml  rca.yaml  streaming.yaml  vision.yaml
configs/prompts/: anomaly_report.yaml
data/: sample.csv
datasets/: registry.yaml
docs/: ETHICS.md  EXECUTION_PLAN.md  RELEASE.md
docs/tutorials/: 01-tabular-fraud.md  02-timeseries-iot.md  03-vision-surveillance.md  04-streaming.md  05-fairness.md
examples/legacy-frontend/About us/: About.css  About.html  About.js
examples/legacy-frontend/Contact/: Contact.css  Contact.html
examples/legacy-frontend/Form/: Form.css  Form.html  Form.js
examples/legacy-frontend/Landing/: Landing.css  Landing.html  Landing.js
examples/legacy-frontend/Response/: No-Response.html  Yes-Response.css  Yes-Response.html  Yes-Response.js
examples/notebooks/: image-anomaly-detection-2.ipynb  image-anomaly-detection.ipynb  video-anomaly-detection (1).ipynb
scripts/: generate_demo_gif.py
src/anomaly_detection/: __init__.py  pipeline.py
src/anomaly_detection/api/: __init__.py  app.py  auth.py  schemas.py
src/anomaly_detection/api/routes/: detect.py  explain.py  root_cause.py  vision.py
src/anomaly_detection/cli/: benchmark.py  detect.py  stream.py
src/anomaly_detection/config/: __init__.py  loader.py
src/anomaly_detection/data_ingestion/: __init__.py  base.py  loader.py  registry.py  utils.py
src/anomaly_detection/data_ingestion/loaders/: __init__.py  csv_loader.py  openml_loader.py  registry_loader.py  ucf_loader.py
src/anomaly_detection/domains/: __init__.py
src/anomaly_detection/domains/vision/: __init__.py  densenet.py  gradcam.py  model_manager.py  preprocess.py  video.py
src/anomaly_detection/evaluation/: __init__.py  benchmark.py  metrics.py  profiler.py
src/anomaly_detection/fairness/: __init__.py  metrics.py  mitigation.py
src/anomaly_detection/llm/: __init__.py  explainer.py  redaction.py
src/anomaly_detection/models/: __init__.py  base.py  registry.py
src/anomaly_detection/models/deep/: __init__.py  autoencoder.py
src/anomaly_detection/models/generative/: __init__.py  diffusion_detector.py  gan_augmentation.py
src/anomaly_detection/models/ml/: __init__.py  isolation_forest.py  lof.py  ocsvm.py
src/anomaly_detection/models/statistical/: __init__.py  iqr.py  zscore.py
src/anomaly_detection/models/streaming/: __init__.py  base.py  pysad_wrapper.py  registry.py  zscore_window.py
src/anomaly_detection/monitoring/: __init__.py  alerts.py  metrics.py
src/anomaly_detection/multimodal/: __init__.py  fusion.py
src/anomaly_detection/preprocessing/: __init__.py  scaler.py  window.py
src/anomaly_detection/rca/: __init__.py  graph.py  scorer.py
tests/: test_package.py  test_pipeline_registry.py
tests/api/: test_auth.py  test_detect.py  test_explain.py  test_root_cause.py  test_vision.py
tests/cli/: test_detect.py
tests/data_ingestion/: test_registry.py
tests/domains/vision/: test_preprocess.py
tests/evaluation/: test_benchmark.py  test_metrics.py  test_profiler.py
tests/fairness/: __init__.py  test_integration.py  test_metrics.py  test_mitigation.py
tests/fixtures/: credit_card_fraud_sample.csv  fairness_sample.csv  nab_sample.csv  ucf_crime_sample.csv
tests/llm/: test_explainer.py
tests/models/: test_detectors.py
tests/models/generative/: test_diffusion.py
tests/multimodal/: test_fusion.py
tests/rca/: __init__.py  test_graph.py
tests/streaming/: test_online.py
