[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detection"
version = "0.1.0"
description = "Anomaly detection framework for tabular and time-series data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhinaysai Kamineni" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
streaming = [
    "pysad>=0.3",
    "psutil>=5.9",
]
rca = [
    "pyrca>=1.0",
]
vision = [
    "tensorflow>=2.15",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
]
fairness = [
    "aif360>=0.6",
]
generative = [
    "scikit-learn>=1.4",
]
llm = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "httpx>=0.27",
]

[project.scripts]
detect = "anomaly_detection.cli.detect:main"
benchmark = "anomaly_detection.cli.benchmark:main"
stream = "anomaly_detection.cli.stream:main"
serve = "anomaly_detection.api.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["anomaly_detection"]
